# Deploying-Image-classification-ML-model-using-FLASK

./: Dockerfile  README.md  app.py  pyproject.toml
